--- a/src/main/resources/assets/divinerpg/lang/it_it.json
+++ b/src/main/resources/assets/divinerpg/lang/it_it.json
@@ -1413,6 +1413,7 @@
   "message.ayeraco.spawn": "L'Orda di Ayeraco è arrivata!",
   "message.standard": "Grazie %s per aver scaricato e giocato &!",
   "tooltip.uses": "%s Usi Rimanenti",
+  "tooltip.iceika_only.effect": "Iceika Massive Buff",
   "tooltip.harvest": "Livello di Raccoglimento: +",
   "tooltip.uses.infinite": "Usi Infiniti",
   "tooltip.arcana": "Consuma %s Arcana",
@@ -1439,6 +1440,7 @@
   "tooltip.effect.no_hunger": "Refills Hunger",
   "tooltip.effect.melee.increase": "+%s Melee Damage",
   "tooltip.effect.no_fall": "No Fall Damage",
+  "tooltip.effect.flight": "Allows To Fly",
   "tooltip.effect.jump.increase": "%sx Jump Height",
   "tooltip.effect.ranged.protection": "%s%% Ranged Damage Protection",
   "tooltip.effect.speed": "%sx Movement Speed",
