--- a/src/main/resources/assets/divinerpg/lang/ru_ru.json
+++ b/src/main/resources/assets/divinerpg/lang/ru_ru.json
@@ -1376,6 +1376,8 @@
   "message.ayeraco.purple": "The Purple Ayeraco has been called upon",
   "message.ayeraco.spawn": "The Ayeraco Horde has arrived!",
   "tooltip.uses": "# Uses Remaining",
+  "tooltip.iceika_only.effect": "Iceika Massive Buff",
+  "tooltip.effect.flight": "Allows To Fly",
   "tooltip.harvest": "Harvest Level: +",
   "tooltip.uses.infinite": "Infinite Uses",
   "tooltip.arcana": "Consumes # Arcana",
